--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "https://Desperado1001.github.io/freelanceflow",
   "dependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "web-vitals": "^3.5.2"
@@ -15,7 +17,9 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "lint": "eslint src/**/*.{js,jsx}",
+    "format": "prettier --write src/**/*.{js,jsx,css}"
   },
   "eslintConfig": {
     "extends": [
@@ -38,8 +42,12 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.4",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.4"
   }
